--- a/app/assets/stylesheets/modules/_chat.scss
+++ b/app/assets/stylesheets/modules/_chat.scss
@@ -13,7 +13,7 @@
       }
       &__members {
         color:#999;
-        display: flex;
+        @include flexbox;
         font-size:12px;
         margin-top:15px;
         .member {
