--- a/app/assets/stylesheets/modules/_chat.scss
+++ b/app/assets/stylesheets/modules/_chat.scss
@@ -12,7 +12,7 @@
         margin-top:35px;
       }
       &__members {
-        color:#999;
+        color: $light_gray;
         @include flexbox;
         font-size:12px;
         margin-top:15px;
@@ -42,12 +42,12 @@
       .upper-message {
         display:flex;
         &__user-name {
-          color:#434a54;
+          color:$black;
           font-size: 16px;
           font-weight:bold
         }
         &__user-date {
-        color:#999;
+        color: $light_gray;
         font-size:7px;
         padding-left: 10px;
         }
@@ -55,7 +55,7 @@
       .lower-message{
         margin-top: 10px;
         &__content{
-          color:#434a54;
+          color:$black;
           font-size:14px;
           margin-bottom:40px;
         }
