--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -1,63 +1,67 @@
 .chat {
-  width:calc(100% - 300px);
+  width: calc(100% - 300px);
   .header {
     box-sizing: border-box;
-    height:100px;
+    height: 100px;
     padding: 0 40px;
     .left-header {
-      float:left;
+      float: left;
       &__title {
         color: #333;
-        font-size:20px;
-        margin-top:35px;
+        font-size: 20px;
+        margin-top: 35px;
       }
       &__members {
-        color: $light_gray;
         @include flexbox;
-        font-size:12px;
-        margin-top:15px;
+        color: $light_gray;
+        font-size: 12px;
+        margin-top: 15px;
         .member {
           display: inline-block;
-          padding-right:5px;
+          padding-right: 5px;
         }
       }
     }
     .right-header {
       border: 1px solid $light_blue;
-      color:$light_blue;
-      float:right;
-      height:40px;
+      color: $light_blue;
+      float: right;
+      height: 40px;
       line-height: 40px;
       margin-top: 28px;
-      padding:0 20px;
+      padding: 0 20px;
+      &__button {
+        color: $light_blue;
+        text-decoration: none;
+      }
     }
   }
 
   .messages {
     background-color: #FAFAFA;
     box-sizing: border-box;
-    padding:46px 40px 0;
-    height:calc(100% - 100px - 90px);
+    padding: 46px 40px 0;
+    height: calc(100% - 100px - 90px);
     .message {
       .upper-message {
-        display:flex;
+        display: flex;
         &__user-name {
-          color:$black;
+          color: $black;
           font-size: 16px;
-          font-weight:bold
+          font-weight: bold;
         }
-        &__user-date {
-        color: $light_gray;
-        font-size:7px;
-        padding-left: 10px;
+        &__date {
+          color: $light_gray;
+          font-size: 12px;
+          padding-left: 10px;
         }
       }
-      .lower-message{
+      .lower-message {
         margin-top: 10px;
-        &__content{
-          color:$black;
-          font-size:14px;
-          margin-bottom:40px;
+        &__content {
+          color: $black;
+          font-size: 14px;
+          margin-bottom: 40px;
         }
       }
     }
@@ -66,35 +70,35 @@
   .form {
     background-color: #DDDDDD;
     box-sizing: border-box;
-    height:90px;
+    height: 90px;
     padding: 20px 50px 20px 40px;
     &__message {
-      border:none;
-      float:left;
-      height:50px;
+      border: none;
+      float: left;
+      height: 50px;
       width: calc(100% - 150px);
     }
     &__mask {
       background-color: $white;
-      float:left;
-      height:50px;
-      padding-right:10px;
+      float: left;
+      height: 50px;
+      padding-right: 10px;
       &__image {
-        font-size:20px;
-        line-height:50px;
+        font-size: 20px;
+        line-height: 50px;
       }
       .hidden {
-        display:none;
+        display: none;
       }
     }
     &__submit {
       background-color: $light_blue;
-      border:none;
+      border: none;
       color: $white;
-      float:right;
+      float: right;
       font-size: 16px;
-      height:50px;
-      margin-left:15px;
+      height: 50px;
+      margin-left: 15px;
       padding: 0 30px;
     }
   }
