--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -53,10 +53,11 @@
             メッセージ
 
     .form
-      %form
-        %input.form__message
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
         .form__mask
-          %label.form__mask__image
-            = fa_icon "picture-o", class:"icon"
-            %input.hidden{type: "file"}
-        %input.form__submit{type:"submit", value:"Send"}
+          = f.label :image, class: 'form__mask__image' do
+            = fa_icon 'picture-o', class: 'icon'
+            = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
+
