--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -64,6 +64,10 @@
           font-size: 14px;
           margin-bottom: 40px;
         }
+        &__image {
+        width:250px;
+        height:150px;
+        }
       }
     }
   }
